kubernetes/apps/default/misc-ingress/app/ingress-external-ssl-pass.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pass
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: bitwarden.png
    gethomepage.dev/name: Pass
    gethomepage.dev/group: Searvices
    gethomepage.dev/description: Vaultwarden Password Manager
spec:
  ingressClassName: external
  rules:
    - host: &host "pass.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pass
                port:
                  number: 4743
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pass
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: https
        port: 4743
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pass
spec:
  ports:
    - name: https
      port: 4743
  type: ClusterIP
